--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -19,16 +19,12 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: coops/sentinels.tex:3
-#, fuzzy
-#| msgid ""
-#| "\\addscenariosection{1}{Cooperative Scenario}{Titans' Stronghold}"
-#| "{\\images/earthquake.png}"
 msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/sentinel."
 "png}"
 msgstr ""
-"\\addscenariosection{1}{Mode coopératif}{La forteresse des Titans}{\\images/"
-"earthquake.png}"
+"\\addscenariosection{1}{Scénario Coopératif}{Sentinelles}{\\images/sentinel."
+"png}"
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -57,10 +53,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:7
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Author:} Invoceusse\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Author:} silence70011\n"
 "\n"
@@ -70,10 +63,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:9
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1219333721019256943}{Archon Studio Discord}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Archon Studio Discord}\n"
 "\n"
@@ -91,6 +81,11 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
+"\\textit{Il existe un monde au delà du notre, empli de bêtes et de monstres, tout juste retenues par une formation de quatre Obélisques Sacrés.\n"
+"  Mais la puissance de ces pierres faiblit, et une brêche est imminente.\n"
+"  Quand cela se produira, vous et vos alliés serez le dernier rempart entre les hordes et la destruction totale de ces terres.\n"
+"}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:16 coops/titans_stronghold.tex:18
@@ -108,15 +103,12 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:18
-#, fuzzy, no-wrap
-#| msgid ""
-#| "This Scenario is played over 16 Rounds (15 on Impossible difficulty).\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "This Scenario is played over 12 Rounds.\n"
 "\n"
 msgstr ""
-"Ce scénario se joue en 16 manches maximum (15 en difficulté impossible).\n"
+"Ce scénario se joue en 12 manches.\n"
 "\n"
 
 #. type: multicols
@@ -136,25 +128,22 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:22 clash/dragoncurse_castle.tex:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Player Count:} 2\n"
 "\n"
 msgstr ""
-"\\textbf{Nombre de joueurs :} 1 -- 6\n"
+"\\textbf{Nombre de joueurs :} 2\n"
 "\n"
 
 #. type: multicols
 #: coops/sentinels.tex:24
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Resources:} 30 \\svg{gold}, 8 \\svg{building_materials}, 2 \\svg{valuables}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Resources:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Ressources de départ :} 30 \\svg{gold}, 8 \\svg{building_materials}, 2 \\svg{valuables}\n"
+"\\textbf{Ressources de départ :} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -170,7 +159,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:32 clash/the_hunt.tex:29
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -179,21 +168,21 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Unités de départ :}\n"
+"\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item Un groupe d'unité \\bronze\\  de votre choix.\n"
-"  \\item Quelques unités \\bronze\\ de votre choix.\n"
+"  \\item Une Unité Groupe \\bronze\\ avec le coût de Recrutement le plus \\textit{faible}\n"
+"  \\item Une Unité Quelques \\bronze\\ avec le coût de Recrutement le plus \\textit{élevé}\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:34 campaigns/castle_greek_gift.tex:35
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"\\textbf{Bâtiments de départ :} Aucun\n"
+"\\textbf{Bâtiment de Départ:} Demeure \\bronze\\, Citadelle\n"
 "\n"
 
 #. type: multicols
@@ -203,18 +192,16 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-
+"\\textbf{Réserve de Tuile:} Chaque joueur pioche une Tuile Proche (IV--V) et une Tuile Lontaine (II--III) aléatoirement. Ces Tuiles ne doivent pas avoir d'Obélisques.\n"
+"\n"
 #. type: multicols
 #: coops/sentinels.tex:38
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Additional Bonus:} None\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Additional Bonus:} Search (2) the Artifact Deck\n"
 "\n"
 msgstr ""
-"\\textbf{Bonus de départ :} Aucun\n"
+"\\textbf{Bonus Additionnel :} Aucun\n"
 "\n"
 
 #. type: multicols*
@@ -253,7 +240,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Prenez les tuiles suivantes et disposez-les comme indiqué sur le schéma du scénario ($J$ représente le nombre de joueurs):\n"
+"Prenez les Tuiles suivantes et disposez-les comme indiqué sur le schéma du Scénario ($J$ représente le nombre de joueurs):\n"
 "\n"
 
 #. type: multicols
@@ -267,6 +254,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item 2 × Tuile de Départ (I)\n"
+"  \\item 4 × Tuiles Lointaines (II--III)\n"
+"  \\item 4 × Tuiles Proches (IV--V) avec Obélisque\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:52 coops/titans_stronghold.tex:59
@@ -291,6 +284,8 @@ msgid ""
 "Defeat all invading armies.\n"
 "\n"
 msgstr ""
+"Vaincre toutes les armées des envahisseurs.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:56 coops/titans_stronghold.tex:63
@@ -313,6 +308,8 @@ msgid ""
 "An undefeated enemy army remains at the end of Round 12.\n"
 "\n"
 msgstr ""
+"Une armée ennemie reste invaincue à la fin de la Manche 12.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:60
@@ -321,6 +318,8 @@ msgid ""
 "One of your Towns is captured, or a Main Hero is defeated in a battle (retreat doesn't count).\n"
 "\n"
 msgstr ""
+"Une de vos Villes est capturée, ou un Héros Principal est vaincu en combat (fuir ne compte pas).\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:62 coops/titans_stronghold.tex:71
@@ -341,13 +340,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:68
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black Cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{6} Round:}\n"
 "\\begin{itemize}\n"
@@ -356,21 +349,16 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{4$^{e}$, 8$^{e}$ et 12$^{e}$ tours :}\n"
+"\\textbf{6$^{e}$ Manche :}\n"
 "\\begin{itemize}\n"
-"  \\item Retirez tous les cubes noirs des moulins à eau, moulin à vent et jardins mystique sur le plateau.\n"
+"  \\item Retirez tous les Cubes Noirs des Moulins à Eau, Moulins à Vent et Jardins Mystiques sur le plateau.\n"
+"  \\item Faire apparaître une armée ennemie en suivant les règles ci-dessous.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols
 #: coops/sentinels.tex:73
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black Cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{7} and \\nth{8} Rounds:}\n"
 "\\begin{itemize}\n"
@@ -378,22 +366,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{4$^{e}$, 8$^{e}$ et 12$^{e}$ tours :}\n"
+"\\textbf{7$^{e}$ et 8$^{e}$ Manches:}\n"
 "\\begin{itemize}\n"
-"  \\item Retirez tous les cubes noirs des moulins à eau, moulin à vent et jardins mystique sur le plateau.\n"
+"  \\item Faire apparaître une armée ennemie en suivant les règles ci-dessous.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols
 #: coops/sentinels.tex:78
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item A Pack of \\bronze\\ Units of your choice\n"
-#| "  \\item A Few \\bronze\\ Units of your choice\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{9} Round:}\n"
 "\\begin{itemize}\n"
@@ -401,22 +382,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Unités de départ :}\n"
+"\\textbf{9$^{e}$ Manche:}\n"
 "\\begin{itemize}\n"
-"  \\item Un groupe d'unité \\bronze\\  de votre choix.\n"
-"  \\item Quelques unités \\bronze\\ de votre choix.\n"
+"  \\item Répéter les évènements de la Manche 6.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols
 #: coops/sentinels.tex:83
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black Cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{10} Round:}\n"
 "\\begin{itemize}\n"
@@ -424,9 +398,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{4$^{e}$, 8$^{e}$ et 12$^{e}$ tours :}\n"
+"\\textbf{10$^{e}$ Manche :}\n"
 "\\begin{itemize}\n"
-"  \\item Retirez tous les cubes noirs des moulins à eau, moulin à vent et jardins mystique sur le plateau.\n"
+"  \\item Faire apparaître une armée ennemie en suivant les règles ci-dessous.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -437,12 +411,12 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Conditions de Défaite}}\n"
+"\\subsection*{\\MakeUppercase{Règles Additionnelles}}\n"
 "\n"
 
 #. type: multicols
@@ -462,18 +436,27 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Ignorer toutes les bordures jaunes des Tuiles de Départ (I).\n"
+"  \\item Les Joueurs peuvent échanger des ressources si l'un de ses Héros visite un comptoir ou si il est adjacent à un Héros allié.\n"
+"  \\item Le Héros qui vainc une armée ennemie gagne 2 \\svg{experience}.\n"
+"    Le Joueur victorieux lance deux dés de trésor et applique le résultat de son choix.\n"
+"  \\item De plus, aucun Joueur:\n"
+"  \\begin{itemize}\n"
+"      \\item Ne peux attaquer un autre Héros.\n"
+"      \\item Capturer une Mine ou une Enclave déjà Revendiquée.\n"
+"  \\end{itemize}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:99
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Timed Events}}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Enemy Spawning\\\\and Movement}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Événement programmés}}\n"
+"\\subsection*{\\MakeUppercase{Apparition Ennemie\\\\et Mouvement}}\n"
 "\n"
 
 #. type: multicols
@@ -491,6 +474,16 @@ msgid ""
 "  \\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Les Armées Ennemies apparaissent sur un Obélisque aléatoire (Utilisez la figurine d'un Héros d'une Faction non jouée).\n"
+"  \\item Déterminez l'Obélisque en lançant 2 Dés d'Attaque. Appliqué les résultats comme suit (D1/D2), relancer les 0:\n"
+"  \\begin{itemize}\n"
+"    \\item $+1$/$+1$ = Nord\n"
+"    \\item $+1$/$-1$ = Est\n"
+"    \\item $-1$/$+1$ = Ouest\n"
+"    \\item $-1$/$-1$ = Sud\n"
+"  \\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:114
@@ -502,6 +495,11 @@ msgid ""
 "  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
 "\n"
 msgstr ""
+"  \\item Pour une distribution plus équilibrée, aux Manches 7 et 9, lancer uniquement le second dé d'attaque (D2). Pour D1, choississez le résultat opposé à la Manche précédente.\n"
+"  Les Manches 8 and 10 sont aléatoires.\n"
+"  \\item Si la Tuile où apparait l'ennemie n'a pas été découvert, retournez la et orientez la comme vous le souhaitez.\n"
+"  \\item Si un Héros sur trouve sur la case d'apparition, un combat commence immédiatement.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:121
@@ -515,18 +513,22 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"  \\item Les Armées Ennemies ont 3 PM par Manche.\n"
+"  \\item Les Armées ennemies se déplacent à la fin de chaque Manche, en commençant par la Manche où ils apparraissent.\n"
+"  \\item Les Armées Ennemies se déplacent selon les règles (p.\\,33), mais à la place de capturer, ils détruisent tout sur leur passage.\n"
+"    Placez un Cube Noir sur les cases qu'ils visitent, ces cases sont maintenant des cases vides.\n"
+"  \\item Si un ennemi peut aller dans plusieurs , les Joueurs choisissent où il se déplace.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:123
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Combat with\\\\Enemy Armies}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Conditions de Défaite}}\n"
+"\\subsection*{\\MakeUppercase{Combat avec\\\\les Armées Ennemies}}\n"
 "\n"
 
 #. type: multicols
@@ -542,6 +544,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Combattre les Armées Ennemies en plus d'un tour de combat ne coûtent pas de Point de Mouvement.\n"
+"  \\item Pendant un combat avec une armée ennemie, un Héros peut fuir à l'activation d'une unité allié.\n"
+"    Un Héros Principal fuyant perd le reste de ses Points de Mouvement et retourne dans une Ville ou une Enclave allié de son choix en gardant toutes unités survivantes.\n"
+"  \\item Un Héros Secondaire fuyant est retiré du jeu, mais le joueur conservent les unités survivantes.\n"
+"  \\item Les Unités Ennemies tuées ne réapparraissent pas.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:133
