--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -295,7 +295,7 @@ msgid ""
 "\\textbf{Additional Bonus:} None\n"
 "\n"
 msgstr ""
-"\\textbf{Bonus de départ :} Aucun\n"
+"\\textbf{Bonus Additionnel :} Aucun\n"
 "\n"
 
 #. type: multicols
