--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -555,15 +555,12 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:133
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Map Setup}}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Boss Army}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Préparation du Plateau}}\n"
+"\\subsection*{\\MakeUppercase{Armée du Boss}}\n"
 "\n"
 
 #. type: multicols
@@ -578,18 +575,25 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item A la Manche 10, une Armée de Boss apparaît. Elle est différente des précédentes car elle est Renforcée par une réserve d'Unités Neutres (Réserve de Renfort = nombre entre parenthèses dans la table).\n"
+"  \\item Au début du 2$^{e}$ Tour de Combat et chaque Tour suivant, 2 Unités Renforcent l'armée restante de la Réserve de Renforts mélangée (maximum 5 Unités) pour continuer le combat jusqu'à la fuite ou la victoire totale du Joueur. \\textit{Si le nombre d'Unités ennemies est de 1 ou moins au début d'un Tour de Combat, piochez jusqu'à un total de 4 Unités ( il y a toujours 4 ou 5 Unités sur le Plateau après Renfort, si possible).}\n"
+"  \\item Placez les Renforts sur leur ligne de base, en commençant par la gauche avec l'Initiative la plus basse Unités (\\svg{unit_ranged} en premier). Si besoin, continuez sur la ligne suivante dans le même ordre.\n"
+"  \\item Si un Joueur fuit, l'Armée Ennemie pioche jusqu'à un ''minimum'' de 4 Unités comme Unités de Départ pour le prochain combat.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:142 coops/close_to_enemies.tex:145
 #: coops/stand_united.tex:87 clash/dragoncurse_castle.tex:85
 #: campaigns/inferno_devilish_plan.tex:224 campaigns/castle_greek_gift.tex:120
 #: campaigns/castle_greek_gift.tex:271 sections/credits.tex:26
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\columnbreak\n"
 "\n"
 msgstr ""
-"\\vspace*{\\fill}\\columnbreak\n"
+"\\columnbreak\n"
 "\n"
 
 #. type: multicols*
@@ -614,54 +618,12 @@ msgid ""
 "  \\centering\n"
 "  \\node at (14, 2) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 msgstr ""
+"[overlay]\n"
+"  \\centering\n"
+"  \\node at (14, 2) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 
 #. type: Plain text
 #: coops/sentinels.tex:192
-#, fuzzy
-#| msgid ""
-#| "\\hommtable[]{28}{ \\centering \\medskip \\textbf{Strength of Titans' "
-#| "Stronghold Armies}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
-#| "{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
-#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
-#| "{\\svg[12]{azure}} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}"
-#| "XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & "
-#| "\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 player} & \\lightcell[1.2]"
-#| "{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
-#| "2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
-#| "2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
-#| "3\\azure}\\\\ \\darkcell[1.2]{2 players} & \\lightcell[1.2]{5\\bronze "
-#| "5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
-#| "3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-#| "\\darkcell[1.8]{3 players} & \\lightcell[1.8]{8\\bronze 7\\silver "
-#| "4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure "
-#| "\\linebreak Then\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
-#| "Then\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
-#| "\\darkcell[1.8]{4 players} & \\lightcell[1.8]{10\\bronze 10\\silver "
-#| "6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden "
-#| "4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure "
-#| "\\linebreak Then\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
-#| "Then\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-#| "\\darkcell[1.8]{5 players} & \\lightcell[1.8]{6\\bronze 6\\silver "
-#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 6\\silver "
-#| "3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden "
-#| "2\\azure \\linebreak Then\\linebreak 5\\bronze 6\\silver 4\\golden "
-#| "3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure "
-#| "\\linebreak Then\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & "
-#| "\\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak "
-#| "Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ "
-#| "\\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
-#| "4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
-#| "5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
-#| "3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden "
-#| "3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure "
-#| "\\linebreak Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & "
-#| "\\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
-#| "Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
-#| "\\end{tabularx} }"
 msgid ""
 "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
 "\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
@@ -687,52 +649,34 @@ msgid ""
 "\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
 "\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 msgstr ""
-"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Force des armées dans la "
-"forteresse des titans}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
-"{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
-"[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
-"\\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
-"\\darkcell{Facile} & \\darkcell{Normal} & \\darkcell{Difficile} & "
-"\\darkcell{Impossible}\\\\ \\darkcell[1.2]{1 joueur} & \\lightcell[1.2]"
-"{3\\bronze 2\\silver 1\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze "
-"2\\silver 2\\golden 1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver "
-"2\\golden 2\\azure} & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden "
-"3\\azure}\\\\ \\darkcell[1.2]{2 joueurs} & \\lightcell[1.2]{5\\bronze "
-"5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]{4\\bronze 5\\silver "
-"3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden "
-"3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
-"\\darkcell[1.8]{3 joueurs} & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden "
-"2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure} & "
-"\\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak "
-"Puis\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
-"{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak Puis\\linebreak "
-"1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ \\darkcell[1.8]{4 joueurs} & "
-"\\lightcell[1.8]{10\\bronze 10\\silver 6\\golden 2\\azure} & \\lightcell[1.8]"
-"{8\\bronze 10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze "
-"5\\silver 5\\golden 3\\azure \\linebreak Puis\\linebreak 2\\bronze 5\\silver "
-"5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden "
-"4\\azure \\linebreak Puis\\linebreak 1\\bronze 5\\silver 7\\golden "
-"4\\azure}\\\\ \\darkcell[1.8]{5 joueurs} & \\lightcell[1.8]{6\\bronze "
-"6\\silver 4\\golden 1\\azure \\linebreak Puis\\linebreak 7\\bronze 6\\silver "
-"3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden "
-"2\\azure \\linebreak Puis\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} "
-"& \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak "
-"Puis\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
-"{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak Puis\\linebreak "
-"2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.8]{6 joueurs} & "
-"\\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak "
-"Puis\\linebreak 7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]"
-"{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak Puis\\linebreak "
-"6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
-"8\\silver 7\\golden 5\\azure \\linebreak Puis\\linebreak 3\\bronze 7\\silver "
-"8\\golden 4\\azure} & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden "
-"6\\azure \\linebreak Puis\\linebreak 3\\bronze 8\\silver 10\\golden "
-"6\\azure}\\\\ \\end{tabularx} }"
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Force de l'Armée Ennemie}\\"
+"\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
+"{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
+"\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
+"{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
+"& \\darkcell{Manches 6 + 7} & \\darkcell{Manches 8 + 9} & \\darkcell{Manche "
+"10}\\\\ \\darkcell[1.4]{Facile} & \\lightcell[1.4]{\\bronze \\silver \\silver "
+"\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
+"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
+"\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
+"\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver \\silver \\silver "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
+"\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
+"\\darkcell[1.4]{Difficile} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
+"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden \\azure} & "
+"\\lightcell[1.4]{\\golden \\golden \\azure \\azure \\footref{azure} "
+"\\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]"
+"{Impossible} & \\lightcell[1.4]{\\silver \\golden \\golden \\golden "
+"\\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & "
+"\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
+"\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 
 #. type: Plain text
 #: coops/sentinels.tex:196
 msgid "\\stepcounter{footnote}"
-msgstr ""
+msgstr "\\stepcounter{footnote}"
 
 #. type: footnotetext{#2}
 #: coops/sentinels.tex:196
@@ -740,3 +684,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
+"Toujours 1 Unités de Dragons Azures (Unités de Départ de l'Armée du Boss). Le reste est "
+"aléatoire\\label{azure}."
