--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -240,7 +240,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Prenez les Tuiles suivantes et disposez-les comme indiqué sur le schéma du Scénario ($J$ représente le nombre de joueurs):\n"
+"Prenez les Tuiles suivantes et disposez-les comme indiqué sur le schéma du Scénario:\n"
 "\n"
 
 #. type: multicols
