--- a/translations/dragoncurse_castle.tex/fr.po
+++ b/translations/dragoncurse_castle.tex/fr.po
@@ -72,12 +72,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:22 clash/dragoncurse_castle.tex:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Player Count:} 2\n"
 "\n"
 msgstr ""
-"\\textbf{Nombre de joueurs :} 1 -- 6\n"
+"\\textbf{Nombre de Joueurs :} 2\n"
 "\n"
 
 #. type: multicols
@@ -102,12 +102,12 @@ msgstr ""
 #: coops/stand_united.tex:87 clash/dragoncurse_castle.tex:85
 #: campaigns/inferno_devilish_plan.tex:224 campaigns/castle_greek_gift.tex:120
 #: campaigns/castle_greek_gift.tex:271 sections/credits.tex:26
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\columnbreak\n"
 "\n"
 msgstr ""
-"\\vspace*{\\fill}\\columnbreak\n"
+"\\columnbreak\n"
 "\n"
 
 #. type: multicols
