--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -194,6 +194,7 @@ msgid ""
 msgstr ""
 "\\textbf{Réserve de Tuile:} Chaque joueur pioche une Tuile Proche (IV--V) et une Tuile Lontaine (II--III) aléatoirement. Ces Tuiles ne doivent pas avoir d'Obélisques.\n"
 "\n"
+
 #. type: multicols
 #: coops/sentinels.tex:38
 #, no-wrap
@@ -656,22 +657,22 @@ msgstr ""
 "\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
 "{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
 "& \\darkcell{Manches 6 + 7} & \\darkcell{Manches 8 + 9} & \\darkcell{Manche "
-"10}\\\\ \\darkcell[1.4]{Facile} & \\lightcell[1.4]{\\bronze \\silver \\silver "
-"\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
+"10}\\\\ \\darkcell[1.4]{Facile} & \\lightcell[1.4]{\\bronze \\silver "
+"\\silver \\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
 "\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
 "\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver \\silver \\silver "
 "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
 "\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
 "\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
-"\\darkcell[1.4]{Difficile} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\golden \\azure \\azure \\footref{azure} "
-"\\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]"
-"{Impossible} & \\lightcell[1.4]{\\silver \\golden \\golden \\golden "
-"\\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
-"\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
+"\\darkcell[1.4]{Difficile} & \\lightcell[1.4]{\\silver \\silver \\golden "
+"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
+"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
+"\\darkcell[1.4]{Impossible} & \\lightcell[1.4]{\\silver \\golden \\golden "
+"\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
+"\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
+"\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 
 #. type: Plain text
 #: coops/sentinels.tex:196
@@ -684,5 +685,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Toujours 1 Unités de Dragons Azures (Unités de Départ de l'Armée du Boss). Le reste est "
-"aléatoire\\label{azure}."
+"Toujours 1 Unités de Dragons Azures (Unités de Départ de l'Armée du Boss). "
+"Le reste est aléatoire\\label{azure}."
