--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -58,7 +58,7 @@ msgid ""
 "\\textbf{Author:} silence70011\n"
 "\n"
 msgstr ""
-"\\textbf{Auteur :} Invoceusse\n"
+"\\textbf{Auteur :} silence70011\n"
 "\n"
 
 #. type: multicols
@@ -81,9 +81,9 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
-"\\textit{Il existe un monde au delà du notre, empli de bêtes et de monstres, tout juste retenues par une formation de quatre Obélisques Sacrés.\n"
-"  Mais la puissance de ces pierres faiblit, et une brêche est imminente.\n"
-"  Quand cela se produira, vous et vos alliés serez le dernier rempart entre les hordes et la destruction totale de ces terres.\n"
+"\\textit{Il existe un monde au-delà du nôtre, empli de bêtes et de monstres, tout juste retenues par une formation de quatre Obélisques Sacrés.\n"
+"  Mais la puissance de ces pierres faiblit, et une brèhe est imminente.\n"
+"  Quand cela se produira, vous et votre allié serez le dernier rempart entre les hordes et la destruction totale de ces terres.\n"
 "}\n"
 "\n"
 
@@ -192,7 +192,7 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-"\\textbf{Réserve de Tuile:} Chaque joueur pioche une Tuile Proche (IV--V) et une Tuile Lontaine (II--III) aléatoirement. Ces Tuiles ne doivent pas avoir d'Obélisques.\n"
+"\\textbf{Réserve de Tuile:} Chaque joueur pioche une Tuile Proche (IV--V) et une Tuile Lointaine (II--III) aléatoirement. Ces Tuiles ne doivent pas avoir d'Obélisques.\n"
 "\n"
 
 #. type: multicols
@@ -336,7 +336,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Événements programmés}}\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
 "\n"
 
 #. type: multicols
@@ -477,7 +477,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Les Armées Ennemies apparaissent sur un Obélisque aléatoire (Utilisez la figurine d'un Héros d'une Faction non jouée).\n"
-"  \\item Déterminez l'Obélisque en lançant 2 Dés d'Attaque. Appliqué les résultats comme suit (D1/D2), relancer les 0:\n"
+"  \\item Déterminez l'Obélisque en lançant 2 Dés d'Attaque. Appliquez les résultats comme suit (D1/D2), relancer les 0:\n"
 "  \\begin{itemize}\n"
 "    \\item $+1$/$+1$ = Nord\n"
 "    \\item $+1$/$-1$ = Est\n"
@@ -496,10 +496,10 @@ msgid ""
 "  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
 "\n"
 msgstr ""
-"  \\item Pour une distribution plus équilibrée, aux Manches 7 et 9, lancer uniquement le second dé d'attaque (D2). Pour D1, choississez le résultat opposé à la Manche précédente.\n"
-"  Les Manches 8 and 10 sont aléatoires.\n"
-"  \\item Si la Tuile où apparait l'ennemie n'a pas été découvert, retournez la et orientez la comme vous le souhaitez.\n"
-"  \\item Si un Héros sur trouve sur la case d'apparition, un combat commence immédiatement.\n"
+"  \\item Pour une distribution plus équilibrée, aux Manches 7 et 9, lancer uniquement le second dé d'attaque (D2). Pour D1, choisissez le résultat opposé à la Manche précédente.\n"
+"  Les Manches 8 et 10 sont aléatoires.\n"
+"  \\item Si la Tuile où apparaît l'ennemi n'a pas été découverte, retournez-la et orientez-la comme vous le souhaitez.\n"
+"  \\item Si un Héros se trouve sur la case d'apparition, un combat commence immédiatement.\n"
 "\n"
 
 #. type: multicols
@@ -515,9 +515,9 @@ msgid ""
 "\n"
 msgstr ""
 "  \\item Les Armées Ennemies ont 3 PM par Manche.\n"
-"  \\item Les Armées ennemies se déplacent à la fin de chaque Manche, en commençant par la Manche où ils apparraissent.\n"
-"  \\item Les Armées Ennemies se déplacent selon les règles (p.\\,33), mais à la place de capturer, ils détruisent tout sur leur passage.\n"
-"    Placez un Cube Noir sur les cases qu'ils visitent, ces cases sont maintenant des cases vides.\n"
+"  \\item Les Armées ennemies se déplacent à la fin de chaque Manche, en commençant par la Manche où elles apparaissent.\n"
+"  \\item Les Armées Ennemies se déplacent selon les règles (p.\\,33), mais à la place de capturer, elles détruisent tout sur leur passage.\n"
+"    Placez un Cube Noir sur les cases qu'elles visitent, ces cases sont maintenant des cases vides.\n"
 "  \\item Si un ennemi peut aller dans plusieurs cases, les Joueurs choisissent où il se déplace.\n"
 "\\end{itemize}\n"
 "\n"
@@ -546,11 +546,11 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Combattre les Armées Ennemies en plus d'un tour de combat ne coûtent pas de Point de Mouvement.\n"
-"  \\item Pendant un combat avec une armée ennemie, un Héros peut fuir à l'activation d'une unité allié.\n"
-"    Un Héros Principal fuyant perd le reste de ses Points de Mouvement et retourne dans une Ville ou une Enclave allié de son choix en gardant toutes unités survivantes.\n"
-"  \\item Un Héros Secondaire fuyant est retiré du jeu, mais le joueur conservent les unités survivantes.\n"
-"  \\item Les Unités Ennemies tuées ne réapparraissent pas.\n"
+"  \\item Combattre les Armées Ennemies plus d'un tour de combat ne coûtent pas de Point de Mouvement.\n"
+"  \\item Pendant un combat avec une armée ennemie, un Héros peut fuir à l'activation d'une unité alliée.\n"
+"    Un Héros Principal fuyant perd le reste de ses Points de Mouvement et retourne dans une Ville ou une Enclave alliée de son choix en gardant toutes ses unités survivantes.\n"
+"  \\item Un Héros Secondaire fuyant est retiré du jeu, mais le Joueur conserve les unités survivantes.\n"
+"  \\item Les Unités Ennemies tuées ne réapparaissent pas.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -579,8 +579,8 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item A la Manche 10, une Armée de Boss apparaît. Elle est différente des précédentes car elle est Renforcée par une réserve d'Unités Neutres (Réserve de Renfort = nombre entre parenthèses dans la table).\n"
 "  \\item Au début du 2$^{e}$ Tour de Combat et chaque Tour suivant, 2 Unités Renforcent l'armée restante de la Réserve de Renforts mélangée (maximum 5 Unités) pour continuer le combat jusqu'à la fuite ou la victoire totale du Joueur. \\textit{Si le nombre d'Unités ennemies est de 1 ou moins au début d'un Tour de Combat, piochez jusqu'à un total de 4 Unités ( il y a toujours 4 ou 5 Unités sur le Plateau après Renfort, si possible).}\n"
-"  \\item Placez les Renforts sur leur ligne de base, en commençant par la gauche avec l'Initiative la plus basse Unités (\\svg{unit_ranged} en premier). Si besoin, continuez sur la ligne suivante dans le même ordre.\n"
-"  \\item Si un Joueur fuit, l'Armée Ennemie pioche jusqu'à un ''minimum'' de 4 Unités comme Unités de Départ pour le prochain combat.\n"
+"  \\item Placez les Renforts sur leur ligne de base, en commençant par la gauche avec l'Initiative la plus basse (Unités \\svg{unit_ranged} en premier). Si besoin, continuez sur la ligne suivante dans le même ordre.\n"
+"  \\item Si un Joueur fuit, l'Armée Ennemie pioche jusqu'à un «minimum» de 4 Unités comme Unités de Départ pour le prochain combat.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -685,5 +685,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Toujours 1 Unités de Dragons Azures (Unités de Départ de l'Armée du Boss). "
+"Toujours 1 Unité de Dragons Azures (Unités de Départ de l'Armée du Boss). "
 "Le reste est aléatoire\\label{azure}."
