--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -82,7 +82,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\textit{Il existe un monde au-delà du nôtre, empli de bêtes et de monstres, tout juste retenues par une formation de quatre Obélisques Sacrés.\n"
-"  Mais la puissance de ces pierres faiblit, et une brèhe est imminente.\n"
+"  Mais la puissance de ces pierres faiblit, et une brèche est imminente.\n"
 "  Quand cela se produira, vous et votre allié serez le dernier rempart entre les hordes et la destruction totale de ces terres.\n"
 "}\n"
 "\n"
@@ -192,7 +192,7 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-"\\textbf{Réserve de Tuile:} Chaque joueur pioche une Tuile Proche (IV--V) et une Tuile Lointaine (II--III) aléatoirement. Ces Tuiles ne doivent pas avoir d'Obélisques.\n"
+"\\textbf{Réserve de Tuiles:} Chaque joueur pioche une Tuile Proche (IV--V) et une Tuile Lointaine (II--III) au hasard. Ces Tuiles ne doivent pas avoir d'Obélisques.\n"
 "\n"
 
 #. type: multicols
@@ -367,7 +367,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{7$^{e}$ et 8$^{e}$ Manches:}\n"
+"\\textbf{7$^{e}$ et 8$^{e}$ Manches :}\n"
 "\\begin{itemize}\n"
 "  \\item Faire apparaître une armée ennemie en suivant les règles ci-dessous.\n"
 "\\end{itemize}\n"
@@ -438,13 +438,13 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Ignorer toutes les bordures jaunes des Tuiles de Départ (I).\n"
-"  \\item Les Joueurs peuvent échanger des ressources si l'un de ses Héros visite un comptoir ou si il est adjacent à un Héros allié.\n"
+"  \\item Ignorez toutes les bordures jaunes des Tuiles de Départ (I).\n"
+"  \\item Les Joueurs peuvent échanger des ressources si l'un de leurs Héros visite un comptoir ou si il est adjacent à un Héros allié.\n"
 "  \\item Le Héros qui vainc une armée ennemie gagne 2 \\svg{experience}.\n"
 "    Le Joueur victorieux lance deux dés de trésor et applique le résultat de son choix.\n"
-"  \\item De plus, aucun Joueur:\n"
+"  \\item De plus, aucun Joueur :\n"
 "  \\begin{itemize}\n"
-"      \\item Ne peux attaquer un autre Héros.\n"
+"      \\item Ne peut attaquer un autre Héros.\n"
 "      \\item Capturer une Mine ou une Enclave déjà Revendiquée.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
@@ -477,7 +477,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Les Armées Ennemies apparaissent sur un Obélisque aléatoire (Utilisez la figurine d'un Héros d'une Faction non jouée).\n"
-"  \\item Déterminez l'Obélisque en lançant 2 Dés d'Attaque. Appliquez les résultats comme suit (D1/D2), relancer les 0:\n"
+"  \\item Déterminez l'Obélisque en lançant 2 Dés d'Attaque. Appliquez les résultats comme suit (D1/D2), relancez les 0:\n"
 "  \\begin{itemize}\n"
 "    \\item $+1$/$+1$ = Nord\n"
 "    \\item $+1$/$-1$ = Est\n"
@@ -496,7 +496,7 @@ msgid ""
 "  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
 "\n"
 msgstr ""
-"  \\item Pour une distribution plus équilibrée, aux Manches 7 et 9, lancer uniquement le second dé d'attaque (D2). Pour D1, choisissez le résultat opposé à la Manche précédente.\n"
+"  \\item Pour une distribution plus équilibrée, aux Manches 7 et 9, lancez uniquement le second dé d'attaque (D2). Pour D1, choisissez le résultat opposé à la Manche précédente.\n"
 "  Les Manches 8 et 10 sont aléatoires.\n"
 "  \\item Si la Tuile où apparaît l'ennemi n'a pas été découverte, retournez-la et orientez-la comme vous le souhaitez.\n"
 "  \\item Si un Héros se trouve sur la case d'apparition, un combat commence immédiatement.\n"
@@ -685,5 +685,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Toujours 1 Unité de Dragons Azures (Unités de Départ de l'Armée du Boss). "
+"Toujours 1 Unité de Dragon Azure (Unités de Départ de l'Armée du Boss). "
 "Le reste est aléatoire\\label{azure}."
