--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -336,7 +336,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\\subsection*{\\MakeUppercase{Évenements programmés}}\n"
 "\n"
 
 #. type: multicols
