--- a/translations/castle_two_knights_defense.tex/fr.po
+++ b/translations/castle_two_knights_defense.tex/fr.po
@@ -84,7 +84,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Événements programmés}}\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
 "\n"
 
 #. type: multicols*
