--- a/translations/inferno_devilish_plan.tex/fr.po
+++ b/translations/inferno_devilish_plan.tex/fr.po
@@ -142,7 +142,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Événements programmés}}\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
 "\n"
 
 #. type: multicols
