--- a/translations/the_fractured_kingdoms.tex/pl.po
+++ b/translations/the_fractured_kingdoms.tex/pl.po
@@ -250,7 +250,7 @@ msgid ""
 msgstr ""
 "\\textbf{4. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Do końca gry zingoruj wszystkie żółte granice na Początkowych Kafelkach Mapy.\n"
+"  \\item Do końca gry zignoruj wszystkie żółte granice na Początkowych Kafelkach Mapy.\n"
 "\\end{itemize}\n"
 "\\textbf{6., 9. i 12. Runda:}\n"
 "\\begin{itemize}\n"
@@ -291,7 +291,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item Każdy \\svg[12]{movement_token_green} w układzie mapy jest jednokierunkowym monolitem.\n"
 "    Będąc na Polu, z którego wychodzi \\svg[12]{movement_token_green}, możesz wydać 1~\\svgeven{movement}, aby przejść na wskazywane przez \\svg[12]{movement_token_green} Pole.\n"
-"  \\item Możesz bronić swojego Miasta swoim Bohaterem, jeśli twój Bohater Główny znajduę się na Początkowym Kafelku Mapy.\n"
+"  \\item Możesz bronić swojego Miasta swoim Bohaterem, jeśli twój Bohater Główny znajduje się na Początkowym Kafelku Mapy.\n"
 "\\end{itemize}\n"
 "\n"
 
