--- a/translations/stand_united.tex/pl.po
+++ b/translations/stand_united.tex/pl.po
@@ -199,7 +199,7 @@ msgid ""
 "\\textbf{Author:} NeuroN\n"
 "\n"
 msgstr ""
-"\\textbf{Autor:} Neuron\n"
+"\\textbf{Autor:} NeuroN\n"
 "\n"
 
 #. type: multicols
