--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -568,31 +568,32 @@ msgstr ""
 "\\darkcell[1.8]{3 graczy} & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden "
 "2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure} & "
 "\\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak "
-"Następnie\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
-"{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak Następnie\\linebreak "
-"1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ \\darkcell[1.8]{4 graczy} & "
-"\\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden 2\\azure} & "
-"\\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
-"{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak Następnie\\linebreak "
-"2\\bronze 5\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze "
-"5\\silver 7\\golden 4\\azure \\linebreak Następnie\\linebreak 1\\bronze "
-"5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]{5 graczy} & "
-"\\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak "
-"Następnie\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
-"{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak Następnie\\linebreak "
-"5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
-"6\\silver 6\\golden 4\\azure \\linebreak Następnie\\linebreak 3\\bronze "
-"6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver "
-"8\\golden 6\\azure \\linebreak Następnie\\linebreak 2\\bronze 6\\silver "
-"8\\golden 5\\azure}\\\\ \\darkcell[1.8]{6 graczy} & \\lightcell[1.8]"
-"{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak Następnie\\linebreak "
-"7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
-"8\\silver 4\\golden 3\\azure \\linebreak Następnie\\linebreak 6\\bronze "
-"7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver "
-"7\\golden 5\\azure \\linebreak Następnie\\linebreak 3\\bronze 7\\silver "
-"8\\golden 4\\azure} & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden "
-"6\\azure \\linebreak Następnie\\linebreak 3\\bronze 8\\silver 10\\golden "
-"6\\azure}\\\\ \\end{tabularx} }"
+"Następnie\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & "
+"\\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
+"Następnie\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
+"\\darkcell[1.8]{4 graczy} & \\lightcell[1.8]{10\\bronze "
+"10\\silver\\linebreak 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze "
+"10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver "
+"5\\golden 3\\azure \\linebreak Następnie\\linebreak 2\\bronze 5\\silver "
+"5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden "
+"4\\azure \\linebreak Następnie\\linebreak 1\\bronze 5\\silver 7\\golden "
+"4\\azure}\\\\ \\darkcell[1.8]{5 graczy} & \\lightcell[1.8]{6\\bronze "
+"6\\silver 4\\golden 1\\azure \\linebreak Następnie\\linebreak 7\\bronze "
+"6\\silver 3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver "
+"4\\golden 2\\azure \\linebreak Następnie\\linebreak 5\\bronze 6\\silver "
+"4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden "
+"4\\azure \\linebreak Następnie\\linebreak 3\\bronze 6\\silver 6\\golden "
+"4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure "
+"\\linebreak Następnie\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ "
+"\\darkcell[1.8]{6 graczy} & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden "
+"1\\azure \\linebreak Następnie\\linebreak 7\\bronze 7\\silver 5\\golden "
+"2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure "
+"\\linebreak Następnie\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} & "
+"\\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
+"Następnie\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & "
+"\\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
+"Następnie\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
+"\\end{tabularx} }"
 
 #. type: center
 #: coops/titans_stronghold.tex:199
